# Miniproject_3

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile  player.cpp  runall.ps1
archive/: CMakeLists.txt  runall.ps1
src/: LOG.h  main.cpp  main1.cpp  player.cpp  player_infinite.cpp  player_invalid.cpp  player_partial.cpp  player_random.cpp
